--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="A simple and clean url-shortener without any of the bs"
+    />
+    <title>URL-Shortener</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="center-coloumn">
+      <div class="center-row">
+        <h1>URL-Shortener</h1>
+      </div>
+    </div>
+  </body>
 </html>
