--- a/web/index.html
+++ b/web/index.html
@@ -12,10 +12,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="center-coloumn">
-      <div class="center-row">
-        <h1>URL-Shortener</h1>
-      </div>
+    <div class="center-container">
+      <h1>URL Shortener</h1>
+      <input type="text" value="Enter Your Username" />
     </div>
   </body>
 </html>
